# OpenGLRepo

./: README.txt  primitives.cpp
old/: glHelperFunction.cpp  glHelperFunction.hpp  main.cpp  primitives.hpp
template_1/: CMakeLists.txt  sources.cmake
template_1/src/: main.cpp  opengl_wrapper.h
template_2/: CMakeLists.txt
template_2/src/: glsl_functions.h  main.cpp  opengl_wrapper.h
template_2/src/shaders/: simple.fs.glsl
template_3/: CMakeLists.txt
template_3/src/: glsl_functions.cpp  glsl_functions.h  main.cpp  opengl_wrapper.cpp  opengl_wrapper.h
template_3/src/shaders/: simple.fs.glsl  simple.vs.glsl
template_4/: CMakeLists.txt
template_4/src/: draw_item.cpp  draw_item.h  main.cpp  opengl_wrapper.cpp  opengl_wrapper.h
template_4/src/shaders/: simple.fs.glsl  simple.vs.glsl
template_5/: CMakeLists.txt
template_5/import/libs/win64/lib/: bz2.lib  freetype.lib  freetyped.lib  libpng16.lib  zlib.lib
template_5/src/: Fonts.cpp  Fonts.h  glsl_functions.cpp  glsl_functions.h  main.cpp  opengl_wrapper.h
template_5/src/shaders/: font.fs.glsl  font.vs.glsl  simple.fs.glsl  simple.vs.glsl
